--- a/cv.html
+++ b/cv.html
@@ -36,29 +36,11 @@
         </div>
 
         <div class="cv-pic">
-          <img src="/images/cv/anya.webp" alt="">
+          <img src="https://venyalebedev.github.io/anya-portfolio/images/cv/anya.webp" alt="">
         </div>
 
       </div>
     </div>
-
-<!--     <div class="links CV">
-      <div class="link-item">
-        <a href="#">Behance</a>
-      </div>
-      <div class="link-item">
-        <a href="#">Сборная солянка проектов</a>
-      </div>
-      <div class="link-item">
-        <a href="https://t.me/amxizh">Telegram</a>
-      </div>
-      <div class="link-item">
-        <a href="https://www.instagram.com/amxizh/">Instagram</a>
-      </div>
-      <div class="link-item">
-        <a href="mailto:amxizh@mail.ru">Mail</a>
-      </div>
-    </div> -->
 
   </body>
 
