--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <body class="ds">
     
     <div class="navbar">
-      <h1 class="S"><span>Привет!)</span><span>👻</span><br>Меня зовут <a href="/cv.html">Меркушева Аня</a>, <br>я&nbsp;графический дизайнер</h1>
+      <h1 class="S"><span>Привет!)</span><span>👻</span><br>Меня зовут <a href="https://venyalebedev.github.io/anya-portfolio/cv.html">Меркушева Аня</a>, <br>я&nbsp;графический дизайнер</h1>
       <p>Работаю с&nbsp;визуальной коммуникацией в&nbsp;городской среде: разрабатываю фирменные стили для территорий, городских праздников и&nbsp;культурных институций, проектирую навигацию. Люблю делать кастомные шрифты и&nbsp;иллюстрации под проекты!</p>
       <img class="page-character" src="images/page-character.png">
     </div>
@@ -25,7 +25,7 @@
     <div class="wrapper">
 
       <div class="project-item">
-        <a href="/pravdinsk-identity.html">
+        <a href="https://venyalebedev.github.io/anya-portfolio/pravdinsk-identity.html">
 
 
           <div id="frame-wrapper">
@@ -43,7 +43,7 @@
 
           <div id="frame-wrapper">
             <div id="frame-reel">
-              <img src="/images/organika-identity/cover-sequence/organika-cover-1.jpg" alt="">
+              <img src="https://venyalebedev.github.io/anya-portfolio/images/organika-identity/cover-sequence/organika-cover-1.jpg" alt="">
             </div>
           </div>
           <div class="project-caption">
@@ -57,7 +57,7 @@
 
           <div id="frame-wrapper">
             <div id="frame-reel">
-              <img src="/images/novogodny-marshrut/cover/novogodny-marshrut-1.webp" alt="">
+              <img src="https://venyalebedev.github.io/anya-portfolio/images/novogodny-marshrut/cover/novogodny-marshrut-1.webp" alt="">
             </div>
           </div>
           <div class="project-caption">
@@ -71,7 +71,7 @@
 
           <div id="frame-wrapper">
             <div id="frame-reel">
-              <img src="/images/ritm-lesa/cover/ritm-lesa-1.webp" alt="">
+              <img src="https://venyalebedev.github.io/anya-portfolio/images/ritm-lesa/cover/ritm-lesa-1.webp" alt="">
             </div>
           </div>
           <div class="project-caption">
@@ -85,7 +85,7 @@
 
           <div id="frame-wrapper">
             <div id="frame-reel">
-              <img src="/images/tambovka-identity/cover/tambovka-identity-cover.webp" alt="">
+              <img src="https://venyalebedev.github.io/anya-portfolio/images/tambovka-identity/cover/tambovka-identity-cover.webp" alt="">
             </div>
           </div>
           <div class="project-caption">
@@ -99,7 +99,7 @@
 
           <div id="frame-wrapper">
             <div id="frame-reel">
-              <img src="/images/sarapul-museum/cover/sarapul-museum-cover.webp" alt="">
+              <img src="https://venyalebedev.github.io/anya-portfolio/images/sarapul-museum/cover/sarapul-museum-cover.webp" alt="">
             </div>
           </div>
           <div class="project-caption">
@@ -113,7 +113,7 @@
 
           <div id="frame-wrapper">
             <div id="frame-reel">
-              <img src="/images/kurchatov-identity/cover/kurchatov-identity.webp" alt="">
+              <img src="https://venyalebedev.github.io/anya-portfolio/images/kurchatov-identity/cover/kurchatov-identity.webp" alt="">
             </div>
           </div>
           <div class="project-caption">
@@ -127,7 +127,7 @@
 
           <div id="frame-wrapper">
             <div id="frame-reel">
-              <img src="/images/udmurtia-molodezh/cover/udmurtia-molodezh-cover.webp" alt="">
+              <img src="https://venyalebedev.github.io/anya-portfolio/images/udmurtia-molodezh/cover/udmurtia-molodezh-cover.webp" alt="">
             </div>
           </div>
           <div class="project-caption">
@@ -140,7 +140,7 @@
 
     <div class="links">
       <div class="link-item">
-        <a href="#">Behance</a>
+        <a href="https://www.behance.net/am_erk">Behance</a>
       </div>
       <div class="link-item">
         <a href="#">Сборная солянка проектов</a>
