--- a/pravdinsk-identity.html
+++ b/pravdinsk-identity.html
@@ -29,46 +29,46 @@
     <div class="wrapper">
 
       <div class="project-item">
-        <img src="images/pravdinsk-identity/cover-sequence/pravdinsk-cover-1.jpg">
+        <img src="https://venyalebedev.github.io/anya-portfolio/images/pravdinsk-identity/cover-sequence/pravdinsk-cover-1.jpg">
       </div>
       <div class="project-item">
-        <img src="images/pravdinsk-identity/cover-sequence/pravdinsk-cover-2.jpg">
+        <img src="https://venyalebedev.github.io/anya-portfolio/images/pravdinsk-identity/cover-sequence/pravdinsk-cover-2.jpg">
       </div>
       <div class="project-item">
-        <img src="images/pravdinsk-identity/cover-sequence/pravdinsk-cover-3.jpg">
+        <img src="https://venyalebedev.github.io/anya-portfolio/images/pravdinsk-identity/cover-sequence/pravdinsk-cover-3.jpg">
       </div>
       <div class="project-item">
-        <img src="images/pravdinsk-identity/cover-sequence/pravdinsk-cover-4.jpg">
+        <img src="https://venyalebedev.github.io/anya-portfolio/images/pravdinsk-identity/cover-sequence/pravdinsk-cover-4.jpg">
       </div>
       <div class="project-item">
-        <img src="images/pravdinsk-identity/cover-sequence/pravdinsk-cover-5.jpg">
+        <img src="https://venyalebedev.github.io/anya-portfolio/images/pravdinsk-identity/cover-sequence/pravdinsk-cover-5.jpg">
       </div>
       <div class="project-item">
-        <img src="images/pravdinsk-identity/cover-sequence/pravdinsk-cover-6.jpg">
+        <img src="https://venyalebedev.github.io/anya-portfolio/images/pravdinsk-identity/cover-sequence/pravdinsk-cover-6.jpg">
       </div>
       <div class="project-item">
-        <img src="images/pravdinsk-identity/cover-sequence/pravdinsk-cover-7.jpg">
+        <img src="https://venyalebedev.github.io/anya-portfolio/images/pravdinsk-identity/cover-sequence/pravdinsk-cover-7.jpg">
       </div>
       <div class="project-item">
-        <img src="images/pravdinsk-identity/cover-sequence/pravdinsk-cover-8.jpg">
+        <img src="https://venyalebedev.github.io/anya-portfolio/images/pravdinsk-identity/cover-sequence/pravdinsk-cover-8.jpg">
       </div>
       <div class="project-item">
-        <img src="images/pravdinsk-identity/cover-sequence/pravdinsk-cover-9.jpg">
+        <img src="https://venyalebedev.github.io/anya-portfolio/images/pravdinsk-identity/cover-sequence/pravdinsk-cover-9.jpg">
       </div>
       <div class="project-item">
-        <img src="images/pravdinsk-identity/cover-sequence/pravdinsk-cover-10.jpg">
+        <img src="https://venyalebedev.github.io/anya-portfolio/images/pravdinsk-identity/cover-sequence/pravdinsk-cover-10.jpg">
       </div>
       <div class="project-item">
-        <img src="images/pravdinsk-identity/cover-sequence/pravdinsk-cover-11.jpg">
+        <img src="https://venyalebedev.github.io/anya-portfolio/images/pravdinsk-identity/cover-sequence/pravdinsk-cover-11.jpg">
       </div>
       <div class="project-item">
-        <img src="images/pravdinsk-identity/cover-sequence/pravdinsk-cover-12.jpg">
+        <img src="https://venyalebedev.github.io/anya-portfolio/images/pravdinsk-identity/cover-sequence/pravdinsk-cover-12.jpg">
       </div>
       <div class="project-item">
-        <img src="images/pravdinsk-identity/cover-sequence/pravdinsk-cover-13.jpg">
+        <img src="https://venyalebedev.github.io/anya-portfolio/images/pravdinsk-identity/cover-sequence/pravdinsk-cover-13.jpg">
       </div>
       <div class="project-item">
-        <img src="images/pravdinsk-identity/cover-sequence/pravdinsk-cover-14.jpg">
+        <img src="https://venyalebedev.github.io/anya-portfolio/images/pravdinsk-identity/cover-sequence/pravdinsk-cover-14.jpg">
       </div>
 
 
