--- a/index.html
+++ b/index.html
@@ -158,5 +158,5 @@
 
   </body>
 
-  <script src="/scripts/frame-reel.js"></script>
+  <script src="https://venyalebedev.github.io/anya-portfolio/scripts/frame-reel.js"></script>
 </html>
